# rust-aegis

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml  zizmor.yml
benches/: benchmark.rs
src/: aes_crate.rs  incremental.rs  incremental_tests.rs  lib.rs  tests.rs  wipe.rs
src/c/: aegis128l.c  aegis128l.rs  aegis128x2.rs  aegis128x4.rs  aegis256.rs  aegis256x2.rs  aegis256x4.rs  mod.rs
src/c/raf/: algorithm.rs  context.rs  errno.rs  error.rs  ffi.rs  io.rs  kdf.rs  merkle.rs  mod.rs  rng.rs  scratch.rs  stream.rs  trampoline.rs
src/compat/: mod.rs
src/compat/rustcrypto_traits_06/: aegis128l.rs  aegis128x2.rs  aegis128x4.rs  aegis256.rs  aegis256x2.rs  aegis256x4.rs  mod.rs
src/pure_rust/: aegis128l.rs  aegis128x2.rs  aegis128x4.rs  aegis256.rs  aegis256x2.rs  aegis256x4.rs  aes_armcrypto.rs  aes_ni.rs  aes_soft.rs  mod.rs
src/test-vectors/: aegis-128l-test-vectors.json  aegis-128x2-test-vectors.json  aegis-128x4-test-vectors.json  aegis-256-test-vectors.json  aegis-256x2-test-vectors.json  aegis-256x4-test-vectors.json  aegismac-test-vectors.json  aesround-test-vector.json  gen.py
tests/: raf_tests.rs
