[package]
name = "aegis"
version = "0.6.2"
edition = "2018"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "AEGIS authenticated ciphers (AEGIS-128, AEGIS-256, AEGIS-128X, AEGIS-256X)"
keywords = ["aegis128l", "cipher", "aead", "aes", "crypto"]
license = "MIT"
homepage = "https://github.com/jedisct1/rust-aegis"
repository = "https://github.com/jedisct1/rust-aegis"
categories = ["no-std", "cryptography"]
readme = "README.md"

[target."cfg(not(any(all(target_arch = \"aarch64\", target_feature = \"aes\"),all(target_arch = \"x86_64\", target_feature = \"aes\"),all(target_arch = \"x86\", target_feature = \"aes\"))))".dependencies.softaes]
version = "0.1"

[build-dependencies]
cc = "1.0.83"

[dev-dependencies]
benchmark-simple = "0.1.8"
ascon-aead = "0.4.2"
aes-gcm = "0.10.3"
boring = "4.1.0"
chacha20poly1305 = "0.10.1"

[[bench]]
name = "benchmark"
harness = false

[features]
default = ["std"]
pure-rust = []
std = []

[profile.release]
codegen-units = 1
incremental = false
panic = "abort"
