[package]
name = "aegis"
version = "0.9.14"
edition = "2018"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "AEGIS authenticated ciphers (AEGIS-128, AEGIS-256, AEGIS-128X, AEGIS-256X)"
keywords = ["aegis128l", "cipher", "aead", "aes", "crypto"]
license = "MIT"
homepage = "https://github.com/jedisct1/rust-aegis"
repository = "https://github.com/jedisct1/rust-aegis"
categories = ["no-std", "cryptography"]
readme = "README.md"
include = [
    "/build.rs",
    "/Makefile",
    "/README.md",
    "/LICENSE",
    "/src/**/*.rs",
    "/src/test-vectors/*.json",
    "/src/c/libaegis/src/**/*.c",
    "/src/c/libaegis/src/**/*.h",
    "/wasm-libs/libaegis.a",
    "/wasm-libs/libaegis_relaxed_simd.a",
]

[target."cfg(not(any(all(target_arch = \"aarch64\", target_feature = \"aes\"),all(target_arch = \"x86_64\", target_feature = \"aes\"),all(target_arch = \"x86\", target_feature = \"aes\"))))".dependencies.softaes]
version = "0.1"

[build-dependencies]
cc = "1.2.67"

[dev-dependencies]
benchmark-simple = "0.1.10"
ascon-aead = "0.6.0"
aes-gcm = "0.11.0"
chacha20poly1305 = "0.11.0"
sthash = "0.2.16"
blake3 = "1.8.5"
ct-codecs = "1.1"
serde_json = "1.0"

[dependencies]
aead = { optional = true, version = "0.6.1", features = ["rand_core"] }
getrandom = { version = "0.4", optional = true }
pastey = { version = "0.2", optional = true }
softaes = { version = "0.1", optional = true }

[target."cfg(not(any(target_arch = \"wasm32\", target_arch = \"wasm64\")))".dependencies.boring]
version = "5.1.0"
optional = true

[[bench]]
name = "benchmark"
harness = false
required-features = ["boring"]

[features]
default = ["std"]
pure-rust = ["softaes"]
rustcrypto-traits-06 = ["aead"]
std = []
raf = ["raf-core", "getrandom"]
raf-core = ["std", "pastey"]
js = ["getrandom", "getrandom/wasm_js"]

[profile.release]
codegen-units = 1
incremental = false
panic = "abort"

[package.metadata.docs.rs]
features = ["raf"]
rustdoc-args = ["--cfg", "docsrs"]
